# anderstorp

./: .gitignore  README.md
client/: index.html  package.json
client/src/: App.tsx  main.tsx
client/src/components/: Header.tsx  IncidentReport.tsx  Layout.tsx
client/src/static/css/: index.css
server/: default.nix  nixpkgs.nix  server.cabal  shell.nix
server/app/: Main.hs
server/src/: Anderstorp.hs  Report.hs
server/src/Anderstorp/Server/: API.hs
server/src/Anderstorp/Types/: API.hs  Discord.hs
